--- a/fooddeliverymernapp/src/index.css
+++ b/fooddeliverymernapp/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#carousel {
+  max-height: 700px;
+  object-fit: contain !important;
+}
